<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".AddAnimangaActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="3dp"
            android:text="@string/choos_cat"
            android:textColor="#fff"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@id/text1"
            app:layout_constraintTop_toBottomOf="@+id/text1">

            <RadioButton
                android:id="@+id/radio_anime"
                style="@style/sub_text"
                android:layout_weight="0.5"
                android:text="@string/anime" />

            <RadioButton
                android:id="@+id/radio_manga"
                style="@style/sub_text"
                android:layout_weight="0.5"
                android:text="@string/manga" />
        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textColorHint="#fff"
            app:errorEnabled="true"
            app:hintTextColor="#fff"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup">

            <EditText
                android:id="@+id/edit_text_name"
                style="@style/editText"
                android:hint="@string/name"
                android:inputType="text"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>


        <RadioGroup
            android:id="@+id/radio_group_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@id/input_layout_name"
            app:layout_constraintTop_toBottomOf="@id/input_layout_name">

            <RadioButton
                android:id="@+id/radio_done"
                style="@style/sub_text"
                android:layout_weight="0.5"
                android:text="Done" />

            <RadioButton
                android:id="@+id/radio_undone"
                style="@style/sub_text"
                android:layout_weight="1"
                android:text="Undone" />
        </RadioGroup>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/add_poster"
                    style="@style/poster"
                    android:onClick="uploadPic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/image_btn"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:adjustViewBounds="true"
                    android:background="@drawable/ic_file_upload"
                    android:onClick="uploadPic"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@+id/add_new"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_link"
                style="@style/match_parent"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textColorHint="#fff"
                app:errorEnabled="true"
                app:hintTextColor="#fff">

                <EditText
                    android:id="@+id/edit_text_link"
                    style="@style/editText"
                    android:hint="@string/link"
                    android:inputType="text"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_desc"
                style="@style/match_parent"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textColorHint="#fff"
                app:errorEnabled="true"
                app:hintTextColor="#fff">

                <EditText
                    android:id="@+id/edit_text_desc"
                    style="@style/editText"
                    android:hint="@string/desc"
                    android:inputType="text"
                    android:scrollbars="vertical"
                    android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btn_upload_pic"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:onClick="uploadPic"
            android:text="@string/upload_poster"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="@+id/radio_group_status"
            app:layout_constraintTop_toBottomOf="@+id/radio_group_status" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="16dp"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

        <Button
            android:id="@+id/add_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="done"
            android:text="@string/save"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>