<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ItemActivity">


    <androidx.constraintlayout.widget.ConstraintLayout style="@style/match_parent">


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:padding="8dp"
            android:textColorHint="@android:color/white"
            app:errorEnabled="true"
            app:hintTextColor="@android:color/white"
            app:layout_constraintEnd_toStartOf="@id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <EditText
                android:id="@+id/edit_name"
                style="@style/editText"
                android:enabled="false"
                android:hint="@string/name"
                android:inputType="text"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>


        <LinearLayout
            android:id="@+id/linear_cat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@id/input_layout_name"
            app:layout_constraintTop_toBottomOf="@+id/input_layout_name">

            <LinearLayout
                style="@style/wrap_style"
                android:orientation="horizontal">

                <TextView
                    style="@style/text"
                    android:text="Category: " />

                <TextView
                    android:id="@+id/text_cat"
                    style="@style/sub_text" />
            </LinearLayout>

            <Spinner
                android:id="@+id/category_spinner"
                style="@style/spinner"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:orientation="vertical"
            android:padding="8dp"
            app:layout_constraintEnd_toEndOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="@id/linear_cat"
            app:layout_constraintTop_toBottomOf="@+id/linear_cat">

            <LinearLayout
                style="@style/wrap_style"
                android:orientation="horizontal">

                <TextView
                    style="@style/text"
                    android:text="Status: " />

                <TextView
                    android:id="@+id/text_status"
                    style="@style/sub_text" />
            </LinearLayout>

            <Spinner
                android:id="@+id/status_spinner"
                style="@style/spinner"/>
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            style="@style/wrap_style"
            android:layout_marginTop="8dp"
            android:backgroundTint="@android:color/transparent"
            app:cardCornerRadius="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/wrap_style">

                <ImageView
                    android:id="@+id/add_poster"
                    style="@style/poster"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <LinearLayout
            android:id="@+id/linearLayout"
            style="@style/match_parent"
            android:layout_margin="8dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_link"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textColorHint="@android:color/white"
                app:errorEnabled="true"
                app:hintTextColor="@android:color/white">

                <EditText
                    android:id="@+id/edit_link"
                    style="@style/editText"
                    android:enabled="false"
                    android:hint="@string/link"
                    android:inputType="text"
                    android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_layout_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:textColorHint="@android:color/white"
                app:errorEnabled="true"
                app:hintTextColor="@android:color/white">

                <EditText
                    android:id="@+id/edit_desc"
                    style="@style/editText"
                    android:enabled="false"
                    android:hint="@string/desc"
                    android:inputType="text"
                    android:scrollbars="vertical"
                    android:singleLine="false" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onSaveClick"
            android:text="@string/save"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/linearLayout"
            app:layout_constraintStart_toStartOf="@+id/linearLayout"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>